--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "langebra"
+name = "athena"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+calcu-rs = { git = "https://github.com/dlamei/Calcu-rs" }
+codespan-reporting = "0.11.1"
+derive_more = "0.99.17"
+itertools = "0.12.0"
+logos = "0.13.0"
