--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "athena"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib"]
+name = "athena"
+path = "src/lib.rs"
+
+[[bin]]
+name = "athena"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -11,3 +20,4 @@ codespan-reporting = "0.11.1"
 derive_more = "0.99.17"
 itertools = "0.12.0"
 logos = "0.13.0"
+wasm-bindgen = "0.2.89"
