--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
-name = "athena"
+crate-type = ["cdylib", "rlib"]
+name = "athena_lib"
 path = "src/lib.rs"
 
 [[bin]]
@@ -21,3 +21,13 @@ derive_more = "0.99.17"
 itertools = "0.12.0"
 logos = "0.13.0"
 wasm-bindgen = "0.2.89"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+  'Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',
+]
