--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,42 +1,53 @@
-name: deploy page with wasm-pack
+name: Deploy wasm site to Pages
 
 on:
   push:
     branches: [ "main" ]
 
-env:
-  CARGO_TERM_COLOR: always
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3 
-      
-      - uses: actions-rs/toolchain@v1
+      - name: install wasm-pack
+        run: |
+          BIN_DIR=wasm-pack-v0.12.1-x86_64-unknown-linux-musl
+          curl -L https://github.com/rustwasm/wasm-pack/releases/download/v0.12.1/$BIN_DIR.tar.gz | tar -xzf-
+          mv $BIN_DIR/wasm-pack .
+          ./wasm-pack build -t web -d web/pkg
+      - name: Setup pages
+        id: pages
+        uses: actions/configure-pages@v4
+      - name: build with wasm-pack
+        run: ./wasm-pack build -t web -d web/pkg
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          profile: minimal
-          toolchain: nightly
-          target: wasm32-unknown-unknown
-          override: true
-      - uses: Swatinem/rust-cache@v1
-      
-      - run: cargo install wasm-pack
-      - run: wasm-pack build --target web
-        
-      #- uses: actions/deploy-pages@v1
-      
-      - uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: ./
-          # do not keep history of all deployments
-          single-commit: true
+          path: ./web
+          
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
