--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ name = "athena"
 path = "src/main.rs"
 
 [dependencies]
-calcu_rs = { git = "https://github.com/dlamei/Calcu-rs" }
+calcu-rs = { git = "https://github.com/dlamei/Calcu-rs" }
 codespan-reporting = "0.11.1"
 derive_more = "0.99.17"
 itertools = "0.12.0"
