--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ codespan-reporting = "0.11.1"
 derive_more = "0.99.17"
 itertools = "0.12.0"
 logos = "0.13.0"
+rustyline = "14.0.0"
 wasm-bindgen = "0.2.89"
 
 [dependencies.web-sys]
