--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,11 @@ codespan-reporting = "0.11.1"
 derive_more = "0.99.17"
 itertools = "0.12.0"
 logos = "0.13.0"
-rustyline = "14.0.0"
 wasm-bindgen = "0.2.89"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+rustyline = "14.0.0"
+
 
 [dependencies.web-sys]
 version = "0.3.4"
