--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,9 @@ jobs:
       - uses: actions/checkout@v3 
         with:
           submodules: True
+
+      - name: Update submodules
+        run: git submodule update --init --recursive
           
       - name: install wasm-pack
         run: |
